--- a/client/blocks.jade
+++ b/client/blocks.jade
@@ -109,9 +109,9 @@ template(name='user_card')
                 else if image_id
                     img.ui.rounded.image(src="{{c.url image_id width=300 height=300 gravity='face' crop='fill'}}")
             .twelve.wide.column
-                unless is_staff
+                if is_frontdesk
                     .header #{first_name} #{last_name} 
-                if is_staff
+                else
                     a.header(href="/user/#{username}") #{first_name} #{last_name} 
                     //- .meta @#{username}
                     +text_view key='address' direct=true label='address'
