--- a/components/projects.jade
+++ b/components/projects.jade
@@ -1,6 +1,46 @@
 template(name='projects')
     .ui.stackable.padded.grid
         .row
+            .sixteen.wide.column
+                .ui.fluid.accordion
+                    .title
+                        .ui.inline.header 
+                            +i name='line chart' classes='ui avatar image'
+                            |project stats
+                            .ui.basic.label #{project_stats_doc.total_count} total
+                            .ui.basic.label #{project_stats_doc.complete_count} complete 
+                            .ui.basic.label #{project_stats_doc.incomplete_count} incomplete 
+                            .ui.basic.label #{project_stats_doc.total_updates_count} total updates 
+                            i.dropdown.icon
+                    .content
+                        .ui.grid
+                            .three.column.row
+                                .column
+                                    .ui.icon.button.recalc_projects(title='recalculate')
+                                        i.refresh.icon
+                                    with project_stats_doc
+                                        .ui.mini.header projects completed time
+                                        .ui.mini.header project estimated time
+                                        .ui.mini.header project monthly completion rate
+                                .column
+                                    .ui.header 
+                                        i.clock.outline.icon
+                                        |latest updates
+                                    .ui.link.bulleted.list
+                                        each latest_updates
+                                            a.item(href="/project/#{parent_id}/view") 
+                                                strong #{text}
+                                            |#{when}
+                                .column
+                                    .ui.header 
+                                        i.comment.outline.icon
+                                        |latest comments
+                                    .ui.link.bulleted.list
+                                        each latest_comments
+                                            a.item(href="/project/#{parent_id}/view") 
+                                                strong #{body}
+                                            |#{when}
+        .row
             .six.wide.column
                 .ui.inline.header 
                     +i name='road-worker' classes='ui avatar image'
@@ -10,23 +50,36 @@ template(name='projects')
                 +cloud filter='project'
             .ten.wide.column.scrolling
                 each projects
-                    +project_card
+                    +project_card_template
                     
                     
-template(name='project_card')
+template(name='project_card_template')
     .ui.fluid.segment
-        .ui.header #{title}
-        +image_view key='image' direct=true
+        a.ui.inline.header(href="/project/#{_id}/view") #{title}
         |!{description}
+        if complete
+            i.large.checkmark.icon(title='complete')
+        else
+            i.large.circle.outline.icon(title='incomplete')
         each tags
             .ui.basic.label #{this}
+        div
+        .ui.large.basic.label
+            |estimated cost #{estimated_cost}
+        .ui.large.basic.label
+            |actual cost #{actual_cost}
+        .ui.large.basic.label
+            |related company #{related_company}
+        .ui.large.basic.label
+            |estimated complete date #{estimated_complete_date}
+        .ui.large.basic.label
+            |actual complete date #{actual_complete_date}
         .ui.accordion
-            .title activity
+            .title 
+                |activity
+                i.dropdown.icon
             .content
                 +activity
-            
-        //- each updates
-        //-     +project_update_small
         a.ui.button(href="/project/#{_id}/view")
             |view
             i.right.chevron.icon
@@ -61,28 +114,33 @@ template(name='project_view')
     with current_doc
         .ui.stackable.padded.grid
             .row
-                .four.wide.column 
-                    a.ui.fluid.button(href="/projects")
+                .sixteen.wide.column 
+                    a.ui.icon.button(href="/projects" title='view projects')
                         +i name='road-worker' classes='ui avatar image'
-                        |projects
-                    .ui.header view project
+                    .ui.inline.header
+                        +text_view key='title' label='title' direct=true
+            .row
+                .four.wide.column 
+                    +array_view key='tags' label='tags' icon='tags' direct=true
+                    +html_view key='description' icon='content' label='description' direct=true
+                    +image_view key='image' icon='image' label='image' direct=true
                     a.ui.big.icon.button(href="/project/#{_id}/edit")
                         i.pencil.icon
                     +voting_full
                     +viewing
-                .twelve.wide.column 
-                    +text_view key='title' label='title' direct=true
-                    +array_view key='tags' label='tags' icon='tags' direct=true
-                    +html_view key='description' icon='content' label='description' direct=true
-                    +image_view key='image' icon='image' label='image' direct=true
-                    +comments
+                .six.wide.column 
+                    .ui.header 
+                        i.rss.icon
+                        |activity
                     +activity
+                .six.wide.column 
+                    +comments
 
 
 template(name='activity')
-    .ui.header 
-        i.rss.icon
-        |activity
+    .ui.button.add_update
+        i.plus.icon
+        |update
     .ui.feed
         each updates
             .event
