--- a/client/fields.jade
+++ b/client/fields.jade
@@ -1133,6 +1133,51 @@ template(name='multi_doc_input')
                 //-                 |#{first_name} #{last_name}
                 //-                 @#{username}
 
+template(name='project_lookup')
+    //- .ui.form
+        //- .ui.inline.header
+        //-     if icon
+        //-         i.icon(class=icon)
+        //-     if title
+        //-         |#{title}
+        //-     else if label
+        //-         |#{label}
+        //-     else if key
+        //-         |#{key}
+        //-     else
+        //-         |#{this}
+    .ui.input
+        input.project_title_lookup(type='text' placeholder='lookup project' autocomplete="off")
+        //- input#multi_doc_select_input(type='text' placeholder="Lookup #{ref_model}..." autocomplete="off")
+    each selections
+        .ui.large.label
+            |#{title}
+    if doc_results
+        .ui.attached.segment
+            .ui.middle.aligned.selection.animated.list
+                each doc_results
+                    .select_doc.item
+                        h3.ui.header
+                            //- img.ui.avatar.image(src="{{c.url image_id width=100 height=100 gravity='face' crop='fill'}}")
+                            strong #{title}
+        //- +clear_value                
+        //- .ui.list
+        //-     each field_value
+        //-         // |#{this}
+        //-         +user_card
+        //-         .ui.large.button
+        //-             |#{first_name} #{last_name}
+                //- with user_from_id
+                //-     .item
+                //-         .right.floated.content
+                //-             i.pull_user.remove.link.icon
+                //-         .image
+                //-             img.ui.avatar.image(src="{{c.url image_id width=100 height=100 gravity='face' crop='fill'}}")
+                //-         .content
+                //-             h4.ui.header
+                //-                 |#{first_name} #{last_name}
+                //-                 @#{username}
+
 template(name='multi_user_view')
     .ui.header 
         |#{title} #{label}
