--- a/client/nav.jade
+++ b/client/nav.jade
@@ -6,15 +6,15 @@ template(name='nav')
                     i.big.spinning.yin.yang.icon
             else
                 a.ui.item(href='/grid' class="{{isActivePath '/grid'}}")
-                    //- +i name='activity-grid-2' classes='ui avatar inline image'    
-                    i.th.large.icon                
+                    +i name='activity-grid-2' classes='ui avatar inline image'    
+                    //- i.th.large.icon                
                 a.ui.icon.item.set_models(href='/m/model' class="{{isActivePath '/m/model'}}")
-                    //- +i name='active-directory' classes='ui avatar inline image'
-                    i.large.fork.icon
+                    +i name='active-directory' classes='ui avatar inline image'
+                    //- i.large.fork.icon
                 if is_resident
                     a.ui.icon.item(href='/resident_portal' class="{{isActivePath '/resident_portal'}}")
-                        //- +i name='home' classes='ui avatar inline image'
-                        i.large.home.icon
+                        +i name='home' classes='ui avatar inline image'
+                        //- i.large.home.icon
                     each bookmarked_models
                         a.ui.item.set_model(href="/m/#{slug}/" title=title)
                             +i name=icon classes='ui avatar inline image'
@@ -28,59 +28,59 @@ template(name='nav')
                     //- a.ui.item(href='/gallery' class="{{isActivePath '/gallery'}}")
                     //-     +i name='gallery' classes='ui avatar inline image'
                     a.ui.item(href='/profiles' class="{{isActivePath '/profiles'}}")
-                        //- +i name='groups' classes='ui avatar inline image'
-                        i.large.users.icon
+                        +i name='groups' classes='ui avatar inline image'
+                        //- i.large.users.icon
                     a.ui.item(href='/dashboard' class="{{isActivePath '/dashboard'}}")
-                        //- +i name='dashboard' classes='ui avatar inline image'
-                        i.large.dashboard.icon
+                        +i name='dashboard' classes='ui avatar inline image'
+                        //- i.large.dashboard.icon
                 if is_manager
                     a.ui.item(href='/manager' class="{{isActivePath '/manager'}}")
-                        //- +i name='user-shield' classes='ui avatar inline image'
-                        i.large.user.shield.icon
+                        +i name='user-shield' classes='ui avatar inline image'
+                        //- i.large.user.shield.icon
                         .mobile.hidden.inline &nbsp; manager
                     a.ui.item(href='/projects' class="{{isActivePath '/projects'}}")
-                        //- +i name='project' classes='ui avatar inline image'
-                        i.chart.line.large.icon
+                        +i name='project' classes='ui avatar inline image'
+                        //- i.chart.line.large.icon
                         .mobile.hidden.inline &nbsp; projects
                 if is_owner
                     a.ui.item(href='/owner_portal' class="{{isActivePath '/owner_portal'}}")
-                        //- +i name='dashboard' classes='ui avatar inline image'
-                        i.large.dashboard.icon
+                        +i name='dashboard' classes='ui avatar inline image'
+                        //- i.large.dashboard.icon
                         .mobile.hidden.inline &nbsp; owner dashboard
                     a.ui.item(href='/owners' class="{{isActivePath '/owners'}}")
-                        //- +i name='rent' classes='ui avatar inline image'
-                        i.money.icon
+                        +i name='rent' classes='ui avatar inline image'
+                        //- i.money.icon
                         .mobile.hidden.inline &nbsp; owners
                     a.ui.item(href='/work_orders' class="{{isActivePath '/work_orders'}}")
-                        //- +i name='work' classes='ui avatar inline image'
-                        i.large.wrench.icon
+                        +i name='work' classes='ui avatar inline image'
+                        //- i.large.wrench.icon
                         .mobile.hidden.inline &nbsp; work orders
                     a.ui.item(href='/minutes' class="{{isActivePath '/minutes'}}")
-                        //- +i name='checklist' classes='ui avatar inline image'
-                        i.large.list.icon
+                        +i name='checklist' classes='ui avatar inline image'
+                        //- i.large.list.icon
                         .mobile.hidden.inline &nbsp; minutes
                     a.ui.item(href='/projects' class="{{isActivePath '/projects'}}")
-                        //- +i name='project' classes='ui avatar inline image'
-                        i.chart.line.large.icon
+                        +i name='project' classes='ui avatar inline image'
+                        //- i.chart.line.large.icon
                         .mobile.hidden.inline &nbsp; projects
             
                 if is_staff
                     a.ui.item(href='/staff_home' class="{{isActivePath '/staff_home'}}")
-                        //- +i name='home' classes='ui avatar inline image'
-                        i.large.home.icon
+                        +i name='home' classes='ui avatar inline image'
+                        //- i.large.home.icon
                     //- a.ui.item(href='/stats' class="{{isActivePath '/stats'}}")
                     //-     +i name='line chart' classes='ui avatar inline image'
                     a.ui.item(href='/staff' class="{{isActivePath '/staff'}}")
-                        //- +i name='manager' classes='ui avatar inline image'
-                        i.large.user.shield.large.icon
+                        +i name='manager' classes='ui avatar inline image'
+                        //- i.large.user.shield.large.icon
                         .mobile.hidden.inline &nbsp; staff
                     a.ui.item(href='/buildings' class="{{isActivePath '/buildings'}}")
-                        //- +i name='building' classes='ui avatar inline image'
-                        i.large.building.icon
+                        +i name='building' classes='ui avatar inline image'
+                        //- i.large.building.icon
                         .mobile.hidden.inline &nbsp; buildings
                     a.ui.item(href='/residents' class="{{isActivePath '/residents'}}")
-                        //- +i name='groups' classes='ui avatar inline image'
-                        i.large.users.icon
+                        +i name='groups' classes='ui avatar inline image'
+                        //- i.large.users.icon
                         .mobile.hidden.inline &nbsp; residents
                     a.ui.item(href='/healthclub' class="{{isActivePath '/healthclub'}}")
                         +i name='kindle' classes='ui avatar inline image'
@@ -104,16 +104,16 @@ template(name='nav')
                         i.code.large.icon
                 if is_admin
                     a.ui.item.set_task(href='/m/task' class="{{isActivePath '/m/task'}}" title='tasks')
-                        //- +i name='tasks' classes='ui avatar inline image'
-                        i.tasks.large.icon
+                        +i name='tasks' classes='ui avatar inline image'
+                        //- i.tasks.large.icon
                     //- a.ui.item(href='/tasks' class="{{isActivePath '/tasks'}}" title='tasks')
                     //-     i.tasks.large.icon
                     a.ui.item(href='/inbox' class="{{isActivePath '/inbox'}}" title='inbox')
-                        //- +i name='inbox' classes='ui avatar inline image'
-                        i.inbox.large.icon
+                        +i name='inbox' classes='ui avatar inline image'
+                        //- i.inbox.large.icon
                     a.ui.item(href='/chat' class="{{isActivePath '/chat'}}" title='chat')
-                        //- +i name='chat' classes='ui avatar inline image'
-                        i.chat.large.outline.icon
+                        +i name='chat' classes='ui avatar inline image'
+                        //- i.chat.large.outline.icon
                 if currentUser
                     unless logging_out
                         //- if is_dev
@@ -139,8 +139,8 @@ template(name='nav')
         .ui.attached.borderless.small.menu.topnav
             each role_models
                 a.item.secnav.set_model(href="/m/#{slug}/" title="#{views} views")
-                    //- +i name=icon classes='ui avatar inline image'
-                    i.large.icon(class=icon)
+                    +i name=icon classes='ui avatar inline image'
+                    //- i.large.icon(class=icon)
                     |#{title}
 
 
