--- a/components/minutes.jade
+++ b/components/minutes.jade
@@ -10,10 +10,10 @@ template(name='minutes')
                 +cloud filter='minute'
             .ten.wide.column.scrolling
                 each minutes
-                    +minute
+                    +minute_card
                     
                     
-template(name='minute')
+template(name='minute_card')
     .ui.fluid.segment
         .ui.header #{meeting_date}
         |!{description}
@@ -40,50 +40,75 @@ template(name='minute_edit')
                 .twelve.wide.column 
                     +date_edit key='meeting_date' label='meeting date' icon='calendar' direct=true
                     .ui.small.header board members present
-                    .ui.list
+                    .ui.link.list
                         each board_members
                             //- a.item(href="/user/#{username}" target='_window') #{title} - #{first_name} #{last_name} 
-                            a.item(href="/m/board_member/#{_id}/edit" target='_window') #{title} - #{first_name} #{last_name} 
-                                .ui.button mark present
-                                .ui.button mark absent
+                            a.ui.small.header.item(href="/m/board_member/#{_id}/edit" target='_window') #{title} - #{first_name} #{last_name} 
+                                .ui.small.compact.button mark present
+                                .ui.small.compact.button mark absent
                     .ui.header call to order
-                    .ui.button call to order
+                    if called_to_order
+                        .ui.header called to order at {{long_date called_to_order_timestamp}}
+                    else
+                        .ui.button.call_to_order
+                            i.bell.icon
+                            | call to order
                     .ui.header owner/guest
                     +textarea_edit key='owner_guest_notes' label='owner/guest notes' direct=true
-                    .ui.header approval of minutes
+                    .ui.header
+                        +i name='approval'
+                        |approval of minutes
                     +textarea_edit key='approval_of_minutes_notes' label='approval of minutes notes' direct=true
-                    .ui.header ratification/ email approvals
+                    .ui.header
+                        +i name='approval'
+                        |ratification/ email approvals
                     +textarea_edit key='ratification_email_approvals' label='ratification/ email approval notes' direct=true
-                    .ui.header financial review
+                    .ui.header 
+                        +i name='invoice'
+                        |financial review
                     +textarea_edit key='financial_review_notes' label='financial review notes' direct=true
-                    .ui.header need for direction
+                    .ui.header 
+                        +i name='sorting-arrows-horizontal'
+                        |need for direction
                     +textarea_edit key='need_for_direction_notes' label='need for direction notes' icon='sorting-arrows-horizontal' direct=true
                     div
-                    .ui.inline.header old business
-                    .ui.button.add_old_business_update
+                    .ui.inline.header 
+                        +i name='clock'
+                        |old business
+                    .ui.accordion
+                        each old_business_updates
+                            .title
+                                .ui.inline.header #{project.title}:
+                                .inline.f7 #{text}
+                            .content
+                                //- .ui.header parent_id #{parent_id}
+                                //- .ui.header project_id #{project_id}
+                                +project_lookup key='project_id' label='project' ref_model='project' direct=true
+                                div
+                                +textarea_edit key='text' direct=true
+                                +remove_button
+                    .ui.icon.button.add_old_business_update
                         i.plus.icon
-                    each old_business_updates
-                        .ui.segment
-                            .ui.header parent_id #{parent_id}
-                            .ui.header #{project_title} #{text}
-                            .ui.header project_id #{project_id}
-                            +project_lookup key='project_id' label='project' ref_model='project' direct=true
-                            +text_edit key='project_title' direct=true
-                            +text_edit key='text' direct=true
-                    +textarea_edit key='old_business_notes' label='old business notes' direct=true
+                    +html_edit key='old_business_notes' label='new business notes' direct=true
                     div
-                    .ui.inline.header new business
-                    .ui.button.add_new_business_update
+                    .ui.inline.header 
+                        +i name='finance'
+                        |new business
+                    .ui.accordion
+                        each new_business_updates
+                            .title
+                                .ui.inline.header #{project.title}:
+                                .inline.f7 #{text}
+                            .content
+                                //- .ui.header parent_id #{parent_id}
+                                //- .ui.header project_id #{project_id}
+                                +project_lookup key='project_id' label='project' ref_model='project' direct=true
+                                div
+                                +textarea_edit key='text' direct=true
+                                +remove_button
+                    .ui.icon.button.add_new_business_update
                         i.plus.icon
-                    each new_business_updates
-                        .ui.segment
-                            .ui.header parent_id #{parent_id}
-                            .ui.header project_id #{project_id}
-                            .ui.header project title #{project.title} #{text}
-                            +project_lookup key='project_id' label='project' ref_model='project' direct=true
-                            +text_edit key='project_title' direct=true
-                            +text_edit key='text' direct=true
-                    +textarea_edit key='new_business_notes' label='new business notes' direct=true
+                    +html_edit key='new_business_notes' label='new business notes' direct=true
                     .ui.header adjournment
                     +textarea_edit key='adjournment_notes' label='adjournment notes' direct=true
                      
@@ -98,8 +123,9 @@ template(name='minute_view')
                         +i name='list' classes='ui avatar image'
                         |minutes
                     .ui.header view minute
-                    a.ui.big.icon.button(href="/minute/#{_id}/edit")
+                    a.ui.big.fluid.button(href="/minute/#{_id}/edit")
                         i.pencil.icon
+                        |edit minutes
                     +voting_full
                     +comments
                     //- +viewing
@@ -107,21 +133,48 @@ template(name='minute_view')
                     .ui.center.aligned.header minutes of the board of director’s meeting
                     .ui.center.aligned.header {{short_date meeting_date}}
                     .ui.header board members present
-                    .ui.header call to order
-                    .ui.button call to order
-                    .ui.header owner/guest
-                    +textarea_view key='owner_guest_notes' label='owner/guest notes' icon='rent' direct=true
-                    .ui.header approval of minutes
-                    +textarea_view key='approval_of_minutes_notes' label='approval of minutes notes' icon='list' direct=true
-                    .ui.header ratification/ email approvals
-                    +textarea_view key='ratification_email_approvals' label='ratification/ email approval notes' icon='message' direct=true
-                    .ui.header financial review
-                    +textarea_view key='financial_review_notes' label='financial review notes' icon='finance' direct=true
-                    .ui.header need for direction
-                    +textarea_view key='need_for_direction_notes' label='need for direction notes' icon='sorting-arrows-horizontal' direct=true
-                    .ui.header old business
-                    +textarea_view key='old_business_notes' label='old business notes' icon='signature' direct=true
-                    .ui.header new business
-                    +textarea_view key='new_business_notes' label='new business notes' icon='signature' direct=true
+                    .ui.header 
+                        +i name='service-bell'
+                        |call to order
+                    .ui.small.header called to order at {{long_date called_to_order_timestamp}}
+                    .ui.header 
+                        +i name='rent'
+                        |owner/guest
+                    +textarea_view key='owner_guest_notes' label='owner/guest notes' direct=true
+                    .ui.header 
+                        +i name='approval'
+                        |approval of minutes
+                    +textarea_view key='approval_of_minutes_notes' label='approval of minutes notes' direct=true
+                    .ui.header 
+                        +i name='approval'
+                        |ratification/ email approvals
+                    +textarea_view key='ratification_email_approvals' label='ratification/ email approval notes' direct=true
+                    .ui.header 
+                        +i name='invoice'
+                        |financial review
+                    +textarea_view key='financial_review_notes' label='financial review notes' direct=true
+                    .ui.header
+                        +i name='sorting-arrows-horizontal'
+                        |need for direction
+                    +textarea_view key='need_for_direction_notes' label='need for direction notes' direct=true
+                    .ui.header 
+                        +i name='clock'
+                        |old business
+                    each old_business_updates
+                        .ui.basic.segment
+                            .ui.small.inline.header #{project.title}
+                            | #{text}
+                    |{{nl2br old_business_notes}}
+                    +html_view key='old_business_notes' label='old business notes' icon='signature' direct=true
+                    .ui.header 
+                        i.briefcase.icon
+                        |new business
+                    each old_business_updates
+                        .ui.basic.segment
+                            .ui.small.inline.header #{project.title}
+                            | #{text}
+                
+                    |{{nl2br new_business_notes}}
+                    +html_view key='new_business_notes' label='new business notes' icon='signature' direct=true
                     .ui.header adjournment
                     +textarea_view key='adjournment_notes' label='adjournment notes' icon='list' direct=true
